crates/bitnet-models/tests/snapshots/snapshot_model_config__gguf_config_arch_gpt2.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: config
---
{
  "architecture": "gpt2",
  "model_name": null,
  "vocab_size": 32000,
  "hidden_size": 768,
  "num_layers": 12,
  "num_heads": 12,
  "num_kv_heads": 12,
  "head_dim": 64,
  "intermediate_size": 3072,
  "max_seq_len": 2048,
  "rope_theta": 10000.0,
  "rope_scaling": null,
  "quantization": {
    "bit_width": 2,
    "block_size": 64,
    "format": "I2_S"
  }
}
