crates/bitnet-models/tests/snapshots/snapshot_model_config__gguf_config_arch_mistral.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: config
---
{
  "architecture": "mistral",
  "model_name": null,
  "vocab_size": 32000,
  "hidden_size": 4096,
  "num_layers": 32,
  "num_heads": 32,
  "num_kv_heads": 32,
  "head_dim": 128,
  "intermediate_size": 16384,
  "max_seq_len": 2048,
  "rope_theta": 10000.0,
  "rope_scaling": null,
  "quantization": {
    "bit_width": 2,
    "block_size": 64,
    "format": "I2_S"
  }
}
