crates/bitnet-models/tests/snapshots/snapshot_model_config__gguf_quant_config_default.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: "GgufQuantizationConfig::default()"
---
GgufQuantizationConfig {
    bit_width: 2,
    block_size: 64,
    format: "I2_S",
}
