crates/bitnet-models/tests/snapshots/snapshot_model_config__load_config_default_debug.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: "LoadConfig::default()"
---
LoadConfig {
    use_mmap: true,
    validate_checksums: true,
    progress_callback: false,
}
