crates/bitnet-models/tests/snapshots/snapshot_model_config__model_format_debug_safetensors.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: "format!(\"{:?}\", ModelFormat::SafeTensors)"
---
SafeTensors
