crates/bitnet-models/tests/snapshots/snapshot_model_config__model_format_extensions.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: "format!(\"SafeTensors={} Gguf={}\", ModelFormat::SafeTensors.extension(),\nModelFormat::Gguf.extension(),)"
---
SafeTensors=safetensors Gguf=gguf
