crates/bitnet-models/tests/snapshots/snapshot_model_config__model_format_json.snap
---
source: crates/bitnet-models/tests/snapshot_model_config.rs
expression: formats
---
[
  "SafeTensors",
  "Gguf"
]
